[package]
name = "egui_gauge"
version = "0.1.3"
edition = "2021"
description = "egui gauge UI element"
license = "MIT"
repository = "https://github.com/bobbobbio/egui_gauge"
homepage = "https://github.com/bobbobbio/egui_gauge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "^0.26"
emath = "^0.26"
epaint = "^0.26"

[dev-dependencies]
eframe = "^0.26"
