[package]
name = "egui_gauge"
version = "0.1.6"
edition = "2024"
description = "egui gauge UI element"
license = "MIT"
repository = "https://github.com/bobbobbio/egui_gauge"
homepage = "https://github.com/bobbobbio/egui_gauge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "^0.33"
emath = "^0.33"
epaint = "^0.33"

[dev-dependencies]
eframe = "^0.33"
